Codesmells advocate (#785)